--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -51,7 +51,16 @@
         "settings": {
           "bundleName": "project1.i18n.i18n"
         }
-      }
+      },
+      "": {
+      "dataSource": "mainService",
+      "preload": true,
+      "settings": {}
+      },
+      "Request": {
+      "type": "sap.ui.model.json.JSONModel",
+      "uri": "RequestOrder.json"
+    }
     },
     "resources": {
       "css": [
